--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ mongodb = { version = "1", default-features=false }
 serde = "1.0.0"
 serde_json = "1.0.39"
 lazy_static = "1"
+log = { version = "0.4.14", features = ["kv_unstable_std"]}
 wither = { version = "0.9.0-alpha.2", features = ["async-std-runtime"], default-features = false }
 tracing = { version = "0.1", default-features = true, features = ["log", "std"] }
 tracing-futures = { version = "0.2", default-features = false, features = ["std-future"] }
