--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tide = "0.16.0"
+tide = "0.14.0"
 tide-handlebars="0.6"
 handlebars="3.2.1"
 async-std = { version = "1.6.0", features = ["unstable", "attributes"] }
@@ -15,6 +15,7 @@ mongodb = { version = "1", default-features=false }
 serde = "1.0.0"
 serde_json = "1.0.39"
 lazy_static = "1"
+log = { version = "0.4.14", features = ["kv_unstable_std"]}
 wither = { version = "0.9.0-alpha.2", features = ["async-std-runtime"], default-features = false }
 tracing = { version = "0.1", default-features = true, features = ["log", "std"] }
 tracing-futures = { version = "0.2", default-features = false, features = ["std-future"] }
